Event 日付による表示変更

--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="mt-4 ml-3 text-center">
-    <h3>カテゴリー新規登録</h3>
+    <h3 class="m-0">カテゴリー新規登録</h3>
   </div>
   <%= form_with model: @category, url: admin_categories_path, method: :post do |f| %>
     <div class="mt-4">
