--- a/app/views/public/events/edit.html.erb
+++ b/app/views/public/events/edit.html.erb
@@ -87,7 +87,7 @@
 
      <div class="row mt-2">
       <div class="col">
-       開催地
+       市区町村　番地
       </div>
       <div class="col">
        <%= f.text_field :place %>
