--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="mt-4 ml-3 text-center">
-    <h3>カテゴリー編集</h3>
+    <h3 class="m-0">カテゴリー編集</h3>
   </div>
   <%= form_with model: @category, url: admin_category_path, method: :patch do |f| %>
     <div class="mt-4">
