--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="mt-4 ml-3 text-center">
-    <h3>カテゴリー一覧</h3>
+    <h3 class="m-0">カテゴリー一覧</h3>
   </div>
   <div class="table-responsive mt-4">
     <table class="table table-striped table-bordered">
