--- a/app/views/admin/events/result.html.erb
+++ b/app/views/admin/events/result.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-   <div class="mt-5 ml-3 text-center"><h4>検索結果</h4></div>
+   <div class="mt-5 ml-3 text-center"><h4 class="m-0">検索結果</h4></div>
 
   <div class="mt-4">
    <% if @events.any?%>
