--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="mt-4 ml-3 text-center">
-    <h3>ユーザー一覧</h3>
+    <h3 class="m-0">ユーザー一覧</h3>
   </div>
 
   <div class="text-center">
