--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -72,7 +72,7 @@
                 <%= f.select :prefecture_id, Prefecture.names.except("--"), {}, class: "form-control" %>
               </div>
               <div class="form-group col-md-6">
-                <%= f.label :place, "開催地" %>
+                <%= f.label :place, "市区町村　番地" %>
                 <%= f.text_field :place, class: "form-control", placeholder: "必須" %>
               </div>
             </div>
