[Fix] image_tag

--- a/app/views/admin/events/result.html.erb
+++ b/app/views/admin/events/result.html.erb
@@ -15,7 +15,7 @@
                       <% if event.image.attached? %>
                         <%= image_tag event.image, class: "img-fluid" %>
                       <% else %>
-                        <%= image_tag 'no_image', class: "img-fluid" %>
+                        <%= image_tag 'no_image.jpg', class: "img-fluid" %>
                       <% end %>
                     <% end %>
                   </div>
