--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -41,7 +41,7 @@
                     <% if event.image.attached? %>
                       <%= image_tag event.image, class: "img-fluid" %>
                     <% else %>
-                      <%= image_tag 'no_image', class: "img-fluid" %>
+                      <%= image_tag 'no_image.jpg', class: "img-fluid" %>
                     <% end %>
                   <% end %>
                 </div>
@@ -85,7 +85,7 @@
                       <% if event.image.attached? %>
                         <%= image_tag event.image, class: "img-fluid" %>
                       <% else %>
-                        <%= image_tag 'no_image', class: "img-fluid" %>
+                        <%= image_tag 'no_image.jpg', class: "img-fluid" %>
                       <% end %>
                     <% end %>
                   </div>
