--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -12,7 +12,7 @@
             <% if @user.image.attached? %>
               <%= image_tag @user.image, size: "200x200", class: "rounded-circle" %>
             <% else %>
-              <%= image_tag 'no_image', size: "200x200", class: "rounded-circle" %>
+              <%= image_tag 'no_image.jpg', size: "200x200", class: "rounded-circle" %>
             <% end %>
           </div>
 
