--- a/app/views/public/events/result.html.erb
+++ b/app/views/public/events/result.html.erb
@@ -13,7 +13,7 @@
                     <% if event.image.attached? %>
                       <%= image_tag event.image, class: "img-fluid" %>
                     <% else %>
-                      <%= image_tag 'no_image', class: "img-fluid" %>
+                      <%= image_tag 'no_image.jpg', class: "img-fluid" %>
                     <% end %>
                 </div>
 
@@ -49,7 +49,7 @@
                       <% if event.image.attached? %>
                         <%= image_tag event.image, class: "img-fluid" %>
                       <% else %>
-                        <%= image_tag 'no_image', class: "img-fluid" %>
+                        <%= image_tag 'no_image.jpg', class: "img-fluid" %>
                       <% end %>
                   </div>
 
