--- a/app/views/public/reservations/show.html.erb
+++ b/app/views/public/reservations/show.html.erb
@@ -12,7 +12,7 @@
             <% if @event.image.attached? %>
               <%= image_tag @event.image, size: "300x300", class: "img-fluid rounded" %>
             <% else %>
-              <%= image_tag 'no_image', size: "300x300", class: "img-fluid rounded" %>
+              <%= image_tag 'no_image.jpg', size: "300x300", class: "img-fluid rounded" %>
             <% end %>
           </div>
         </div>
