--- a/app/views/public/users/_notification.html.erb
+++ b/app/views/public/users/_notification.html.erb
@@ -15,7 +15,7 @@
                         <% if notification.event.image.attached? %>
                           <%= image_tag notification.event.image, class: "img-fluid" %>
                         <% else %>
-                          <%= image_tag 'no_image', class: "img-fluid" %>
+                          <%= image_tag 'no_image.jpg', class: "img-fluid" %>
                         <% end %>
                       </div>
                       <div class="col mt-2">
