--- a/app/views/public/users/favorite.html.erb
+++ b/app/views/public/users/favorite.html.erb
@@ -12,7 +12,7 @@
                     <% if favorite.event.image.attached? %>
                       <%= image_tag favorite.event.image, class: "img-fluid" %>
                     <% else %>
-                      <%= image_tag 'no_image', class: "img-fluid" %>
+                      <%= image_tag 'no_image.jpg', class: "img-fluid" %>
                     <% end %>
                   </div>
                   <div class="col mt-2">
@@ -56,7 +56,7 @@
                       <% if favorite.event.image.attached? %>
                         <%= image_tag favorite.event.image, class: "img-fluid" %>
                       <% else %>
-                        <%= image_tag 'no_image', class: "img-fluid" %>
+                        <%= image_tag 'no_image.jpg', class: "img-fluid" %>
                       <% end %>
                     </div>
                     <div class="col mt-2">
