--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -13,6 +13,7 @@
       <br>たくさんのご応募お待ちしております。</h5>
       <div class="mt-2">
         <h6>投稿したイベントの中止をご検討される場合は、管理者にご連絡いただきますようお願い申し上げます。</h6>
+        <h5 class="">管理者連絡先:admin1@example.com</h5>
       </div>
       <div class="mt-3 text-danger"><h6>※このサイトのイベントは全て架空のものです。<br>実際にイベントは存在しませんので、ご注意ください。</h6></div>
     </div>
