--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,34 +1,7 @@
 <div class="container">
  <div class="mt-4 mb-3 text-center"><h4 class="m-0">イベント一覧</h4></div>
 
-  <div class="row">
-    <div class="col-md-4 mt-5">
-      <div class="container border border-dark">
-        <!--検索機能-->
-       <div class="text-center border-bottom">検索</div>
-        <div class="container">
-          <%= form_with url: admin_event_result_path(@events), method: :get, class: "form-inline justify-content-between" do |f| %>
-            <div class="mt-2 mb-2">
-              <%= f.text_field :keyword, placeholder: "キーワードを入力" %>
-            </div>
-            <div class="mb-2">
-              <%= f.date_field :start_date, value: Date.today %>
-            </div>
-            <div class="mb-2">
-              <%= f.select :prefecture, Prefecture.names %>
-            </div>
-            <div class="mb-2">
-              <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
-                 <%= b.check_box + b.text %><br>
-              <% end %>
-            </div>
-            <div class="mb-2">
-              <%= f.submit "検索", class: "btn btn-primary" %>
-            </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
+  <%= render 'public/events/search', events: @events %>
 
     <div class="col-md-8">
       <div class="container mt-4">
