[Fix]event show

--- a/app/views/public/events/_search.erb
+++ b/app/views/public/events/_search.erb
@@ -12,9 +12,9 @@
               <%= f.date_field :start_date, value: Date.today %>
               <%= f.select :prefecture, Prefecture.names %>
             </div>
-            <div class="mb-2">
+            <div class="mb-2 pull-left">
               <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
-                 <%= b.check_box + b.text %><br>
+                <%= b.label {b.check_box + b.text} %>
               <% end %>
             </div>
             <div class="mb-2">
