--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -121,7 +121,7 @@
       </div>
       <div class="col-sm-8">
        <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
-        <%= b.check_box + b.text %>
+        <%= b.label {b.check_box + b.text} %>
        <% end %>
       </div>
      </div>
