--- a/app/views/public/events/new.html.erb
+++ b/app/views/public/events/new.html.erb
@@ -21,7 +21,7 @@
 
             <div class="form-group">
               <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
-                <%= b.check_box + b.text %>
+                <%= b.label {b.check_box + b.text} %>
               <% end %>
             </div>
 
