--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -84,7 +84,7 @@
             <label for="category_ids" class="col-sm-3 col-form-label">興味のある種目<br>※任意・複数回答</label>
             <div class="col-sm-9">
               <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
-                 <%= b.check_box + b.text %>
+                <%= b.label { b.check_box + b.text } %>
               <% end %>
             </div>
           </div>
