--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
  <div class="mt-4 mb-3 text-center"><h4 class="m-0">イベント一覧</h4></div>
 
+ <div class="row">
   <%= render 'public/events/search', events: @events %>
 
     <div class="col-md-8">
