--- a/app/views/public/events/_search.erb
+++ b/app/views/public/events/_search.erb
@@ -1,4 +1,4 @@
- <div class="row">
+
     <div class="col-md-4 mt-5">
       <div class="container border border-dark">
        <div class="text-center border-bottom">検索</div>
@@ -12,9 +12,9 @@
               <%= f.date_field :start_date, value: Date.today %>
               <%= f.select :prefecture, Prefecture.names %>
             </div>
-            <div class="mb-2 pull-left">
+            <div class="mb-2">
               <%= f.collection_check_boxes :category_ids, Category.all, :id, :name do |b| %>
-                <%= b.label {b.check_box + b.text} %>
+                <%= b.check_box + b.text %><br>
               <% end %>
             </div>
             <div class="mb-2">
